syntax = "proto3";

package reminder.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/Roum1212/todo/pkg/gen/reminder/v1;reminder_v1";

service ReminderService {
  rpc CreateReminder(CreateReminderRequest) returns (CreateReminderResponse);
  rpc DeleteReminder(DeleteReminderRequest) returns (google.protobuf.Empty);
  rpc GetAllReminders(google.protobuf.Empty) returns (GetAllRemindersResponse);
  rpc GetReminderByID(GetReminderByIDRequest) returns (GetReminderByIDResponse);
}

message Reminder {
  int64 id = 1;
  string title = 2;
  string description = 3;
}

message CreateReminderRequest {
  string title = 1;
  string description = 2;
}

message CreateReminderResponse {
  int64 id = 1;
}

message DeleteReminderRequest {
  int64 id = 1;
}

message GetAllRemindersResponse {
  repeated Reminder reminders = 1;
}

message GetReminderByIDRequest {
  int64 id = 1;
}

message GetReminderByIDResponse {
  Reminder reminder = 1;
}
